--- a/provisioning.yml
+++ b/provisioning.yml
@@ -13,7 +13,7 @@
     ###
     ### Run general preparation
     ###
-    - role: djx339.swapoff
+    - role: swapoff
       tags:
         - swap
       when: (swap_enabled | default(False))
