--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -73,6 +73,9 @@ nextcloud_subdomain: "nextcloud"
 portainer_enabled: true
 portainer_subdomain: "portainer"
 
+seafile_enabled: true
+seafile_subdomain: "seafile"
+
 traefik_enabled: true
 traefik_subdomain: "traefik"
 
