--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -80,6 +80,9 @@ portainer_subdomain: "portainer"
 seafile_enabled: true
 seafile_subdomain: "seafile"
 
+dozzle_enabled: true
+dozzle_subdomain: "dozzle"
+
 traefik_enabled: true
 traefik_subdomain: "traefik"
 
