--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -76,6 +76,9 @@ portainer_subdomain: "portainer"
 seafile_enabled: true
 seafile_subdomain: "seafile"
 
+dozzle_enabled: true
+dozzle_subdomain: "dozzle"
+
 traefik_enabled: true
 traefik_subdomain: "traefik"
 
