--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -74,6 +74,9 @@ netdata_subdomain: "netdata"
 nextcloud_enabled: true
 nextcloud_subdomain: "nextcloud"
 
+filerun_enabled: true
+filerun_subdomain: "filerun"
+
 portainer_enabled: true
 portainer_subdomain: "portainer"
 
