--- a/provisioning.yml
+++ b/provisioning.yml
@@ -38,7 +38,6 @@
     ###
     ### Requirements
     ###
-    - role: geerlingguy.security
     - role: geerlingguy.docker
     - role: geerlingguy.pip
     - role: darkwizard242.lazydocker
@@ -114,10 +113,17 @@
         - dozzle
       when: (dozzle_enabled | default(False))
 
+    - role: filerun
+      tags:
+        - filerun
+      when: (filerun_enabled | default(False))
+
     # Nextcloud is unable to configure right after install and I dont want to wait untill il will be ok. So moved this section here.
     - role: nextcloud_config
       tags:
         - nextcloud
       when: (nextcloud_enabled | default(False))
+
+    - role: geerlingguy.security
 
     - role: cheatsheet
