--- a/roles/cheatsheet/tasks/main.yml
+++ b/roles/cheatsheet/tasks/main.yml
@@ -31,4 +31,15 @@
 
       Make user and add default docker entrypoint.
 
+      ### Filerun
+
+      Change username
+      Set dark theme
+      Enable API
+
+      ### Files Nextcloud/Filerun
+
+      You have to sync files now via app. Setup iOS/Android/Mac/Win(?)
+      Sync bookmarks via floccus
+
       =========================
