--- a/roles/upgrade-packages/tasks/main.yml
+++ b/roles/upgrade-packages/tasks/main.yml
@@ -17,7 +17,7 @@
     state: latest
     force_apt_get: yes
 
-- name: Install some packages
+- name: Install extra packages
   apt:
     name: "{{ mayurifag_general_extra_packages }}"
     state: present
@@ -40,3 +40,5 @@
 - name: Automatically remove any unused dependencies
   apt:
     autoremove: true
+
+# TODO: add clean apt
