--- a/provisioning.yml
+++ b/provisioning.yml
@@ -103,6 +103,11 @@
         - netdata
       when: (netdata_enabled | default(False))
 
+    - role: doku
+      tags:
+        - doku
+      when: (doku_enabled | default(False))
+
     - role: wallabag
       tags:
         - wallabag
