--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -60,7 +60,9 @@ mayurifag_github_io_enabled: true
 dante_enabled: true
 shadowsocks_enabled: true
 watchtower_enabled: true
+
 wireguard_enabled: true
+wireguard_ui_subdomain: "wg"
 
 glances_enabled: true
 glances_subdomain: "glances"
