--- a/roles/cheatsheet/tasks/main.yml
+++ b/roles/cheatsheet/tasks/main.yml
@@ -42,4 +42,8 @@
       You have to sync files now via app. Setup iOS/Android/Mac/Win(?)
       Sync bookmarks via floccus
 
+      ### Wireguard
+
+      Check /root/wg for some configurations.
+
       =========================
