--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -3,11 +3,7 @@
     msg: "Only Debian supported for now"
   when: ansible_distribution != 'Debian'
 
-- include_tasks:
-  file: wireguard-install.yml
-
-- include_tasks:
-  file: wireguard-setup.yml
-
-- include_tasks:
-  file: wireguard-fetch-profiles.yml
+- import_tasks: wireguard-deploy-ui.yml
+- import_tasks: wireguard-install.yml
+- import_tasks: wireguard-setup.yml
+- import_tasks: wireguard-fetch-profiles.yml
