--- a/roles/shadowsocks/tasks/main.yml
+++ b/roles/shadowsocks/tasks/main.yml
@@ -1,76 +1,20 @@
-- name: Create temporary folders to download ss-rust + v2ray to be cleaned after installation
-  file:
-    path: "{{ item }}"
-    state: directory
-  with_items:
-    - "{{ shadowsocks_temp_download_folder }}"
-    - "{{ shadowsocks_temp_download_folder }}/ss-rust"
-    - "{{ shadowsocks_temp_download_folder }}/v2ray-plugin"
-    - "/etc/shadowsocks-rust"
-
-- name: Download ss-rust
-  get_url:
-    url: "{{ shadowsocks_download_link }}"
-    dest: "{{ shadowsocks_temp_download_folder }}/ss-rust.tar.gz"
-
-- name: Unpack ss-rust.tar.gz
-  unarchive:
-    remote_src: yes
-    src: "{{ shadowsocks_temp_download_folder }}/ss-rust.tar.gz"
-    dest: "{{ shadowsocks_temp_download_folder }}/ss-rust"
-
-- name: Copy ss-rust binary to /usr/local/bin
-  copy:
-    remote_src: yes
-    src: "{{ shadowsocks_temp_download_folder }}/ss-rust/ssserver"
-    dest: /usr/local/bin/ssserver
-    mode: 0777
-
-- name: Set cap_net_bind_service+eip on /usr/local/bin/ssserver
-  capabilities:
-    path: /usr/local/bin/ssserver
-    capability: cap_net_bind_service+eip
-    state: present
-
-- name: Download v2ray plugin
-  get_url:
-    url: "{{ shadowsocks_v2ray_download_link }}"
-    dest: "{{ shadowsocks_temp_download_folder }}/v2ray-plugin.tar.gz"
-
-- name: Unpack v2ray plugin
-  unarchive:
-    remote_src: yes
-    src: "{{ shadowsocks_temp_download_folder }}/v2ray-plugin.tar.gz"
-    dest: "{{ shadowsocks_temp_download_folder }}/v2ray-plugin"
-
-- name: Copy v2ray plugin to /usr/local/bin
-  copy:
-    remote_src: yes
-    src: "{{ shadowsocks_temp_download_folder }}/v2ray-plugin/v2ray-plugin_linux_amd64"
-    dest: /usr/local/bin/v2ray-plugin
-    mode: 0777
-
-- name: Set cap_net_bind_service+eip on /usr/local/bin/v2ray-plugin
-  capabilities:
-    path: /usr/local/bin/v2ray-plugin
-    capability: cap_net_bind_service+eip
-    state: present
-
-- name: Deploy shadowsocks config file
-  template:
-    src: config.json.j2
-    dest: /etc/shadowsocks-rust/config.json
-    mode: 0744
-
-- name: Deploy shadowsocks-rust.service systemd unit file
-  copy:
-    src: shadowsocks-rust.service
-    dest: /usr/lib/systemd/system/shadowsocks-rust.service
-    mode: 0755
-  notify:
-    - Restart shadowsocks-rust
-
-- name: "Cleanup: remove {{ shadowsocks_temp_download_folder }} folder with all contents"
-  file:
-    path: "{{ shadowsocks_temp_download_folder }}"
-    state: absent
+---
+- name: Shadowsocks + xray-plugin Docker Container
+  docker_container:
+    name: ss-xray
+    image: mazy/ss-xray:v1.13.1-v1.5.3-0
+    pull: true
+    env:
+      HOST: "{{ shadowsocks_subdomain }}.{{ server_hostname }}"
+      SERVER_ADDR: "{{ shadowsocks_address }}"
+      PASSWORD: "{{ shadowsocks_password }}"
+      PLUGIN: "{{ shadowsocks_plugin }}"
+      PLUGIN_OPTS: "{{ shadowsocks_plugin_opts }}"
+      METHOD: "{{ shadowsocks_encrypt_method }}"
+    restart_policy: unless-stopped
+    memory: "{{ shadowsocks_memory }}"
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.ss-xray.rule: "Host(`{{ shadowsocks_subdomain }}.{{ server_hostname }}`)"
+      traefik.http.routers.ss-xray.tls.certresolver: "letsencrypt"
+      traefik.http.services.ss-xray.loadbalancer.server.port: "1080"
