--- a/provisioning.yml
+++ b/provisioning.yml
@@ -123,6 +123,11 @@
         - filerun
       when: (filerun_enabled | default(False))
 
+    - role: navidrome
+      tags:
+        - navidrome
+      when: (navidrome_enabled | default(False))
+
     # Nextcloud is unable to configure right after install and I dont want to wait untill il will be ok. So moved this section here.
     - role: nextcloud_config
       tags:
