--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -1,8 +1,41 @@
 ---
-- fail:
-    msg: "Only Debian supported for now"
-  when: ansible_distribution != 'Debian'
+- name: Delete wireguard directories
+  file:
+    path: "{{ wireguard_data_directory }}/"
+    state: absent
 
-- import_tasks: wireguard-install.yml
-- import_tasks: wireguard-setup.yml
-- import_tasks: wireguard-fetch-profiles.yml
+- name: Create wireguard data directory
+  file:
+    path: "{{ item }}"
+    state: directory
+  with_items:
+    - "{{ wireguard_data_directory }}/"
+
+- name: Wireguard-Easy Docker Container
+  docker_container:
+    name: wg-easy
+    image: "{{ wireguard_docker_image }}"
+    pull: true
+    recreate: yes
+    sysctls:
+      "net.ipv4.ip_forward": "1"
+      "net.ipv4.conf.all.src_valid_mark": "1"
+    restart_policy: unless-stopped
+    capabilities:
+      - NET_ADMIN
+      - SYS_MODULE
+    memory: "{{ wireguard_memory }}"
+    env:
+      "PASSWORD": "{{ admin_userpassword }}"
+      "WG_HOST": "{{ wireguard_subdomain }}.{{ server_hostname }}"
+      "WG_DEFAULT_DNS": "1.1.1.1, 8.8.8.8, 8.8.4.4"
+    ports:
+      - "51820:51820/udp"
+      - "51821:51821/tcp"
+    volumes:
+      - "{{ wireguard_data_directory }}/:/etc/wireguard"
+    labels:
+      traefik.enable: "{{ wireguard_available_externally }}"
+      traefik.http.routers.wg-easy.rule: "Host(`{{ wireguard_subdomain }}.{{ server_hostname }}`)"
+      traefik.http.services.wg-easy.loadbalancer.server.port: "51821"
+      traefik.http.routers.wg-easy.middlewares: "my-headers@file"
