--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -57,6 +57,7 @@ mayurifag_github_io_enabled: true
 watchtower_enabled: true
 
 wireguard_enabled: true
+wireguard_subdomain: "wg"
 
 proxy_enabled: true
 proxy_user: change_this
