--- a/roles/upgrade-packages/defaults/main.yml
+++ b/roles/upgrade-packages/defaults/main.yml
@@ -8,6 +8,7 @@ mayurifag_general_extra_packages:
   - linux-headers-amd64
   - linux-image-amd64
   - mc
+  - net-tools
   - ncdu
   - unzip
   - wget
