--- a/roles/upgrade-packages/defaults/main.yml
+++ b/roles/upgrade-packages/defaults/main.yml
@@ -5,8 +5,8 @@ mayurifag_general_extra_packages:
   - aptitude
   - curl
   - htop
-  - linux-headers-amd64
-  - linux-image-amd64
+  # - linux-headers-amd64
+  # - linux-image-amd64
   - mc
   - net-tools
   - ncdu
