--- a/roles/upgrade-packages/tasks/main.yml
+++ b/roles/upgrade-packages/tasks/main.yml
@@ -23,19 +23,19 @@
     state: present
     force_apt_get: yes
 
-- name: Check if a reboot is needed
-  register: reboot_required_file
-  stat: path=/var/run/reboot-required get_md5=no
+# - name: Check if a reboot is needed
+#   register: reboot_required_file
+#   stat: path=/var/run/reboot-required get_md5=no
 
-- name: Reboot the box if kernel updated
-  reboot:
-    msg: "Reboot initiated by Ansible for kernel updates"
-    connect_timeout: 5
-    reboot_timeout: 300
-    pre_reboot_delay: 0
-    post_reboot_delay: 30
-    test_command: uptime
-  when: reboot_required_file.stat.exists
+# - name: Reboot the box if kernel updated
+#   reboot:
+#     msg: "Reboot initiated by Ansible for kernel updates"
+#     connect_timeout: 5
+#     reboot_timeout: 300
+#     pre_reboot_delay: 0
+#     post_reboot_delay: 30
+#     test_command: uptime
+#   when: reboot_required_file.stat.exists
 
 - name: Automatically remove any unused dependencies
   apt:
