--- a/roles/dozzle/defaults/main.yml
+++ b/roles/dozzle/defaults/main.yml
@@ -3,7 +3,7 @@ dozzle_enabled: true
 dozzle_available_externally: "true"
 
 # network
-dozzle_subdomain: "glances"
+dozzle_subdomain: "dozzle"
 
 # specs
 dozzle_memory: 1g
