--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,11 @@
     ".ansible-lint": "yaml",
     // "**/components/*/*.js": "javascriptreact",
     // "**/config/routes.js": "javascriptreact"
+  },
+  "workbench.colorCustomizations": {
+    "tree.indentGuidesStroke": "#c4c1c1",
+    "activityBar.background": "#2D2F24",
+    "titleBar.activeBackground": "#3F4132",
+    "titleBar.activeForeground": "#F9FAF8"
   }
 }
