--- a/roles/ocis/tasks/main.yml
+++ b/roles/ocis/tasks/main.yml
@@ -8,8 +8,8 @@
   file:
     path: "{{ item }}"
     state: directory
-    owner: 1000
-    group: 1000
+    owner: "{{ admin_uid }}"
+    group: "{{ admin_gid }}"
   with_items:
     - "{{ ocis_data_directory }}/userfiles"
     - "{{ ocis_data_directory }}/config"
@@ -42,4 +42,3 @@
       traefik.http.routers.ocis.rule: "Host(`{{ ocis_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.ocis.loadbalancer.server.port: "9200"
       traefik.http.routers.ocis.middlewares: "my-headers@file"
-      # traefik.http.routers.ocis.service: ocis
