--- a/roles/nextcloud/defaults/main.yml
+++ b/roles/nextcloud/defaults/main.yml
@@ -4,10 +4,15 @@ nextcloud_available_externally: "true"
 
 # directories
 nextcloud_data_directory: "{{ docker_home }}/nextcloud"
+nextcloud_files_directory: "{{ files_home }}/"
+
+nextcloud_container: "nextcloud"
+nextcloud_version: "28.0.4"
 
 nextcloud_subdomain: "nextcloud"
 
-# username / passwords
 nextcloud_sql_user: "nextcloud-user"
 nextcloud_sql_password: "nextcloud-pass"
 nextcloud_redis_password: "nextcloud-redis"
+# nextcloud_uid: "{{ admin_uid }}"
+# nextcloud_gid: "{{ admin_gid }}"
