--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: Remove Traefik Config Directory
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - "{{ traefik_data_directory }}/dynamic_configs"
+    # - "{{ traefik_data_directory }}/letsencrypt"
+
 - name: Create Traefik Directories
   file:
     path: "{{ item }}"
