--- a/roles/doku/tasks/main.yml
+++ b/roles/doku/tasks/main.yml
@@ -5,11 +5,11 @@
     image: amerkurev/doku
     pull: true
     volumes:
-      - '/var/run/docker.sock:/var/run/docker.sock:ro'
-      - '/:/hostroot:ro'
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "/:/hostroot:ro"
     restart_policy: unless-stopped
     labels:
       traefik.enable: "{{ doku_available_externally }}"
       traefik.http.routers.doku.rule: "Host(`{{ doku_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.doku.loadbalancer.server.port: "9090"
-      traefik.http.routers.doku.middlewares: "auth@file,my-headers@file"
+      traefik.http.routers.doku.middlewares: "auth,my-headers"
