--- a/roles/filerun/tasks/main.yml
+++ b/roles/filerun/tasks/main.yml
@@ -56,8 +56,8 @@
       FR_DB_PASS: "{{ filerun_sql_password }}"
       APACHE_RUN_USER: www-data
       APACHE_RUN_GROUP: www-data
-      APACHE_RUN_USER_ID: '33'
-      APACHE_RUN_GROUP_ID: '33'
+      APACHE_RUN_USER_ID: "33"
+      APACHE_RUN_GROUP_ID: "33"
     restart_policy: unless-stopped
     labels:
       traefik.enable: "{{ filerun_available_externally }}"
@@ -65,5 +65,5 @@
       traefik.http.routers.filerun.rule: "Host(`{{ filerun_subdomain }}.{{ server_hostname }}`)"
       traefik.frontend.rule: "Host:{{ filerun_subdomain }}.{{ server_hostname }}"
       traefik.http.services.filerun.loadbalancer.server.port: "80"
-      traefik.http.routers.filerun.middlewares: "my-headers@file,frameOptionsSameOrigin"
+      traefik.http.routers.filerun.middlewares: "my-headers,frameOptionsSameOrigin"
       traefik.http.middlewares.frameOptionsSameOrigin.headers.customFrameOptionsValue: "sameorigin"
