--- a/roles/glances/tasks/main.yml
+++ b/roles/glances/tasks/main.yml
@@ -16,4 +16,4 @@
       traefik.enable: "{{ glances_available_externally }}"
       traefik.http.routers.glances.rule: "Host(`{{ glances_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.glances.loadbalancer.server.port: "61208"
-      traefik.http.routers.glances.middlewares: "auth@file,my-headers@file"
+      traefik.http.routers.glances.middlewares: "auth,my-headers"
