--- a/roles/ocis/tasks/main.yml
+++ b/roles/ocis/tasks/main.yml
@@ -41,4 +41,4 @@
       traefik.enable: "{{ ocis_available_externally }}"
       traefik.http.routers.ocis.rule: "Host(`{{ ocis_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.ocis.loadbalancer.server.port: "9200"
-      traefik.http.routers.ocis.middlewares: "my-headers@file"
+      traefik.http.routers.ocis.middlewares: "my-headers"
