--- a/roles/wallabag/tasks/main.yml
+++ b/roles/wallabag/tasks/main.yml
@@ -23,4 +23,4 @@
       traefik.enable: "{{ wallabag_available_externally }}"
       traefik.http.routers.wallabag.rule: "Host(`{{ wallabag_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.wallabag.loadbalancer.server.port: "80"
-      traefik.http.routers.wallabag.middlewares: "my-headers@file"
+      traefik.http.routers.wallabag.middlewares: "my-headers"
