--- a/roles/navidrome/defaults/main.yml
+++ b/roles/navidrome/defaults/main.yml
@@ -5,7 +5,7 @@ navidrome_available_externally: "true"
 navidrome_subdomain: "mus"
 
 navidrome_data_directory: "/home/{{ admin_username }}/navidrome_data"
-navidrome_music_directory: "{{ filerun_data_directory }}/files/Music"
+# navidrome_music_directory: "{{ filerun_data_directory }}/files/Music"
 
 navidrome_user_and_group: "33:33" # www-data:www-data
 
